# bpf-samples

./: .gitmodules  README.md
c/ksyscall/: ksyscall.bpf.c  ksyscall.c
c/minimal/: minimal.bpf.c  minimal.c  minimal.skel.h  readme.md  vmlinux.h
c/minimal/bpftool/bootstrap/: bpftool  btf.d  btf_dumper.d  common.d  disasm.d  gen.d  json_writer.d  main.d  xlated_dumper.d
rust-examples/: Cargo.toml
rust-examples/src/: bootstrap.rs  fentry.rs  kprobe.rs  minimal.rs  minimal_legacy.rs  profile.rs  sockfilter.rs  syscall.rs  tc.rs  xdp.rs
rust-examples/src/bpf/: bootstrap.bpf.c  bootstrap.h  bootstrap.skel.rs  fentry.skel.rs  kprobe.bpf.c  kprobe.skel.rs  minimal.bpf.c  minimal.skel.rs  minimal_legacy.skel.rs  mod.rs  profile.h  profile.skel.rs  sockfilter.bpf.c  sockfilter.skel.rs  tc.bpf.c  tc.skel.rs  uprobe.bpf.c  uprobe.skel.rs  xdp.bpf.c  xdp.skel.rs
rust/minimal/: Cargo.toml
rust/minimal/src/: main.rs
rust/minimal/src/bpf/: minimal.skel.rs  mod.rs
