[package]
name = "rust-examples"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.28"
libbpf-rs = "0.21.2"
time = "0.3.28"

[[bin]]
name = "minimal"
path = "src/minimal.rs"

[[bin]]
name = "minimal_legacy"
path = "src/minimal_legacy.rs"

[[bin]]
name = "bootstrap"
path = "src/bootstrap.rs"

[[bin]]
name = "kprobe"
path = "src/kprobe.rs"

[[bin]]
name = "fentry"
path = "src/fentry.rs"

[[bin]]
name = "xdp"
path = "src/xdp.rs"
