[package]
name = "rust-examples"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
blazesym = "0.2.0-alpha.6"
chrono = "0.4.28"
clap = { version = "4.4.5", features = ["derive"] }
libbpf-rs = "0.21.2"
libc = "0.2.148"
nix = { version = "0.27.1", features = ["net"] }
num_cpus = "1.16.0"
time = "0.3.28"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"

[[bin]]
name = "minimal"
path = "src/minimal.rs"

[[bin]]
name = "minimal_legacy"
path = "src/minimal_legacy.rs"

[[bin]]
name = "bootstrap"
path = "src/bootstrap.rs"

[[bin]]
name = "kprobe"
path = "src/kprobe.rs"

[[bin]]
name = "fentry"
path = "src/fentry.rs"

[[bin]]
name= "xdp"
path = "src/xdp.rs"

[[bin]]
name = "tc"
path = "src/tc.rs"

[[bin]]
name = "profile"
path = "src/profile.rs"
